--- a/src/Interfaz/Menu.form
+++ b/src/Interfaz/Menu.form
@@ -1007,6 +1007,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="&#x2191;"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="upProdChasisMaseActionPerformed"/>
+              </Events>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
                   <AbsoluteConstraints x="230" y="170" width="-1" height="-1"/>
@@ -1447,7 +1450,7 @@
                 </Constraint>
               </Constraints>
             </Component>
-            <Component class="javax.swing.JLabel" name="ganaciasMase">
+            <Component class="javax.swing.JLabel" name="gananciasMase">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Segoe UI Black" size="20" style="0"/>
